# fastpath

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  logging.ini  main.py  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose-dev.yaml
app/: main.py
app/api/v1/routers/: auth_router.py  health_check_router.py  path_router.py  root_router.py  user_router.py
app/core/: cache_manager.py  lifespan.py  logger.py  settings.py
app/exceptions/: erros.py  exception_handler.py
app/middlewares/: logger_middleware.py
app/migrations/: env.py
app/migrations/versions/: 060910088e9d_add_cascade_in_user_and_path_models.py  2c32167e811b_create_user_table.py  5df23bcb071d_create_paths_and_coordinates_table.py  9f85e4164de3_add_single_parent_in_path.py  c9874d386b99_fix_func_to_update_models.py  d8e509853035_using_fk_as_pk_in_association_table_.py
app/models/: coordinates_model.py  path_model.py  table_model.py  user_model.py
app/repositories/: cache_repository.py  path_repository.py  user_repository.py
app/schemas/: coordinates_schema.py  filters_params_schema.py  path_schema.py  token_schema.py  user_schema.py
app/schemas/examples/: user_example.py
app/services/: auth_service.py  cache_service.py  path_service.py  user_service.py
app/solvers/: ortools_solver.py
app/tests/: conftest.py  test_auth.py  test_health_check.py  test_paths.py  test_root.py  test_users.py
app/tests/factories/: coordinates_factory.py  path_factory.py  user_factory.py
