[project]
name = "fastpath"
version = "0.1.0"
description = "API to calculate the fast delivery path."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.0",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "taskipy>=1.14.1",
    "testcontainers>=4.13.3",
]

[tool.taskipy.tasks]
run = { cmd = "fastapi dev app/main.py", help="run API in dev env"}

lint = { cmd="ruff check", help="check lint erros"}

pre_format = "ruff check --fix"
format = { cmd="ruff format", help="format the code"}

test = { cmd="pytest", help="run all tests"}
post_test = "coverage html"

cover = { cmd="coverage report", help="show code coverage"}

commit = { cmd="pre-commit run --all-files", help="runs pre commit"}
