[project]
name = "fastpath"
version = "0.1.0"
description = "API to calculate the fast delivery path."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "ortools>=9.11",
    "protobuf>=4.25.1,<6.0",
    "psycopg[binary]>=3.2.13",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=38.2.0",
    "freezegun>=1.5.5",
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.3",
    "taskipy>=1.14.1",
    "testcontainers>=4.13.3",
]

[tool.taskipy.tasks]
run = { cmd = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload", help="run API in dev env"}

lint = { cmd="ruff check", help="check lint erros"}

pre_format = "ruff check --fix"
format = { cmd="ruff format", help="format the code"}

test = { cmd="pytest", help="run all tests"}

cover = { cmd="coverage report", help="show code coverage"}

commit = { cmd="pre-commit run --all-files", help="runs pre commit"}

type = { cmd="pyright", help="runs pyright to check types"}
